# squeaky-turntable

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs  track_fetcher.rs
src/audio_player/: audio_player.rs  controls.rs  display_track.rs  mod.rs  playlist.rs
style/: _displaytrack.scss  _playlist.scss  _variables.scss  fonts.scss  style.scss
style/primeflex/: primeflex.css  primeflex.css.map
style/primeflex/themes/: primeone-dark.css  primeone-dark.css.map  primeone-light.css  primeone-light.css.map
