[package]
name = "leptos-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
leptos_icons = "0.3.1"
icondata = "0.3.0"
wasm-bindgen-futures = "0.4.42"
thaw = { version = "0.3.3", features = ["csr"] }
leptos-use = "0.11.3"
