[package]
name = "leptos-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "0.3.36"
time-macros = "0.2.16"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
leptos_icons = "0.3.1"
icondata = "0.3.0"
wasm-bindgen-futures = "0.4.42"
leptos-use = "0.11.3"
stylance = "0.5.1"
